# rules_pip_example

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  py.bzl  requirements.in  requirements.txt
app/: BUILD.bazel  app_test.py  handler.py  main.py
tools/pytest/: BUILD.bazel  rules.bzl
