load("@com_apt_itude_rules_pip//rules:compile.bzl", "compile_pip_requirements")
load("//:py.bzl", "PY3_PATH", "PY2_PATH")

compile_pip_requirements(
    name = "pip-compile",
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
    python_interpreter = PY3_PATH,
)


py_runtime(
    name = "py_runtime",
    interpreter_path = select({
        # Until python rules have proper toolchain support we have to provide hardcoded paths
        # to the python interpreters here
        "@bazel_tools//tools/python:PY2": PY2_PATH,
        "@bazel_tools//tools/python:PY3": PY3_PATH,
    }),
    files = [],
    visibility = ["//visibility:public"],
)
