# load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
# load("@com_apt_itude_rules_pip//tools/pytest:rules.bzl", "pytest_test")
load("//tools/pytest:rules.bzl", "pytest_test")

py_library(
    name = "handler",
    srcs = ["handler.py"],
    deps = [
        "@py3_deps//aiohttp",
    ],
)

py_binary(
    name = "app",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        ":handler",
        "@py3_deps//aiohttp",
    ],
    python_version = "PY3",
)

# py3_image(
#     name = "app.image",
#     srcs = ["main.py"],
#     main = "main.py",
#     deps = [
#         "@py3_deps//aiohttp",
#     ],
#     python_version = "PY3",
# )

pytest_test(
    name = "app_test",
    src = "app_test.py",
    deps = [
        ":app",
        ":handler",
        "@py3_deps//aiohttp",
        "@py3_deps//pytest_aiohttp",
        # "@py3_deps//pytest",
    ],
    python_version = "PY3",
)